--- a/src/html/general/prizeEdit.html
+++ b/src/html/general/prizeEdit.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="description" content="">
   <meta name="keywords" content="">
-  <title>学习报告-全部报告</title>
+  <title>奖品管理-奖品列表</title>
   <!-- build:css -->
   <link rel="stylesheet" href="../../js/vendor/fontawesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="../../js/vendor/animate.css/animate.min.css">
@@ -138,19 +138,16 @@
     <section>
       <div class="content-wrapper">
         <div class="content-heading">
-          全部报告
-          <div class='mt10 xc-clearfix'>
-              <a href="javascript:history.go(-1)" class="btn btn-primary pull-left">返回</a>
-          </div>
+          奖品列表
         </div>
         <div class="row">
           <div class="col-xs-12">
             <!-- START panel-->
             <div class="panel-default">
               <div class="panel-heading">
-                <form class="text-right form-lineH">
+                <form class="text-right pt-15">
                   <div class="row">
-                    <div class="form-group col-sm-3">
+                    <!-- <div class="form-group col-sm-3">
                       <label class="col-sm-4">选择班级：</label>
                       <div class="col-sm-8">
                         <select name="" id="" class="form-control">
@@ -159,70 +156,70 @@
                           <option value="2">班级2</option>
                         </select>
                       </div>
-                    </div>
+                    </div> -->
                     <div class="form-group col-sm-3">
-                      <label class="col-sm-4">学生手机：</label>
+                      <label class="col-sm-4">奖品名称：</label>
                       <div class="col-sm-8">
                         <input type="tel" name="" class="form-control">
                       </div>
                     </div>
                     <div class="col-sm-1">
-                      <button type="button" class="btn btn-primary">搜索</button>
+                      <button type="submit" class="btn btn-primary">搜索</button>
                     </div>
                   </div>
                 </form>
               </div>
               <!-- START table-responsive-->
               <div class="panel-heading">
+                <div class="row mb-10">
+                  <div class="col-sm-1">
+                    <a class="btn btn-primary" href="../general/prizeEdit.html">+新建商品</a>
+                  </div>
+                </div>
                 <div class="table-responsive">
                   <table id="" class="table table-bordered table-hover">
                     <thead>
                       <tr>
-                        <th>学生手机</th>
-                        <th>姓名</th>
-                        <th>总学习效率</th>
-                        <th>最后一天学习效率</th>
-                        <th>连续未学</th>
-                        <th>学生总积分</th>
-                        <th>总学习天数</th>
+                        <th>编号</th>
+                        <th>名称</th>
+                        <th>数量</th>
+                        <th>中奖率</th>
+                        <th>图片</th>
                         <th>操作</th>
                       </tr>
                     </thead>
-                    <tbody id="designerlist">
+                    <tbody>
                       <tr>
-                        <td>18000000000</td>
-                        <td>名字名字</td>
-                        <td>52%（01:13:59/02:22:05）</td>
-                        <td>52%（01:13:59/02:22:05）</td>
-                        <td>5天</td>
-                        <td>500</td>
-                        <td>500</td>
+                        <td>1</td>
+                        <td>奖品1</td>
+                        <td>15</td>
+                        <td>52%</td>
+                        <td><img src="../../img/dummy.png"></td>
                         <td>
-                          <a class="btn btn-primary" href="studyreport_all_info.html">查看</a>
+                          <a class="btn btn-primary" href="studyreport_all_info.html">编辑</a>
+                          <a class="btn btn-danger" href="javascript:;">删除</a>
                         </td>
                       </tr>
                       <tr>
-                        <td>18000000000</td>
-                        <td>名字名字</td>
-                        <td>52%（01:13:59/02:22:05）</td>
-                        <td>52%（01:13:59/02:22:05）</td>
-                        <td class="xc-red">35天</td>
-                        <td>500</td>
-                        <td>500</td>
+                        <td>1</td>
+                        <td>奖品1</td>
+                        <td>15</td>
+                        <td>52%</td>
+                        <td><img src="../../img/dummy.png"></td>
                         <td>
-                          <a class="btn btn-primary" href="studyreport_all_info.html">查看</a>
+                          <a class="btn btn-primary" href="studyreport_all_info.html">编辑</a>
+                          <a class="btn btn-danger" href="javascript:;">删除</a>
                         </td>
                       </tr>
                       <tr>
-                        <td>18000000000</td>
-                        <td>名字名字</td>
-                        <td>52%（01:13:59/02:22:05）</td>
-                        <td>52%（01:13:59/02:22:05）</td>
-                        <td>5天</td>
-                        <td>500</td>
-                        <td>500</td>
+                        <td>1</td>
+                        <td>奖品1</td>
+                        <td>15</td>
+                        <td>52%</td>
+                        <td><img src="../../img/dummy.png"></td>
                         <td>
-                          <a class="btn btn-primary" href="studyreport_all_info.html">查看</a>
+                          <a class="btn btn-primary" href="studyreport_all_info.html">编辑</a>
+                          <a class="btn btn-danger" href="javascript:;">删除</a>
                         </td>
                       </tr>
                     </tbody>
@@ -265,7 +262,7 @@
     <!-- 主要内容END -->
     <!-- build:foot -->
     <footer>
-      <span>&copy; 2019 - 滨清科技-bingblue.com</span>
+      <span>&copy; 2019 - 滨清科技 www.bingblue.com</span>
     </footer>
     <!-- endbuild -->
   </div>
