--- a/src/html/general/prizeList.html
+++ b/src/html/general/prizeList.html
@@ -164,7 +164,7 @@
                       </div>
                     </div>
                     <div class="col-sm-1">
-                      <button type="button" class="btn btn-primary">搜索</button>
+                      <button type="submit" class="btn btn-primary">搜索</button>
                     </div>
                   </div>
                 </form>
@@ -173,7 +173,7 @@
               <div class="panel-heading">
                 <div class="row mb-10">
                   <div class="col-sm-1">
-                    <button type="button" class="btn btn-primary">+新建商品</button>
+                    <a class="btn btn-primary" href="../general/prizeEdit.html">+新建商品</a>
                   </div>
                 </div>
                 <div class="table-responsive">
