--- a/src/html/part/css.html
+++ b/src/html/part/css.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="../../js/vendor/fontawesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="../../js/vendor/animate.css/animate.min.css">
-  <link rel="stylesheet" href="../../css/bootstrap.css" id="bscss">
+  <link rel="stylesheet" href="../../css/bootstrap.css">
   <link rel="stylesheet" href="../../js/vendor/datatable-bootstrap/css/dataTables.bootstrap.css">
   <link rel="stylesheet" href="../../js/vendor/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css">
-  <link rel="stylesheet" href="../../css/app.css" id="maincss">
+  <link rel="stylesheet" href="../../css/app.css">
   <link rel="stylesheet" href="../../css/theme-e.css">
