--- a/src/html/part/foot.html
+++ b/src/html/part/foot.html
@@ -1,3 +1,4 @@
 <footer>
-      <span>&copy; 2019 - 滨清科技 www.bingblue.com</span>
+      <span>&copy; 2019 - 哥老官</span>
+      <a class="support" href="https://www.bingblue.com">技术支持：<img src="../../img/logo-single.png">滨清科技</a>
     </footer>
