--- a/src/html/part/sidebar.html
+++ b/src/html/part/sidebar.html
@@ -1,76 +1,49 @@
 <!-- 左侧菜单 -->
-<aside class="aside">
-  <div class="aside-inner">
-    <nav data-sidebar-anyclick-close="" class="sidebar">
-      <ul class="nav">
-        <li class="nav-heading ">
-          <span>一般业务员</span>
-        </li>
-        <li class=" ">
-          <a href="#prize" title="奖品管理" data-toggle="collapse">
-            <em class="fa fa-gift"></em>
-            <span>奖品管理</span>
-          </a>
-          <ul id="prize" class="nav sidebar-subnav collapse">
-            <li class="sidebar-subnav-header">奖品管理</li>
+    <aside class="aside">
+      <div class="aside-inner">
+        <nav data-sidebar-anyclick-close="" class="sidebar">
+          <ul class="nav">
+            <li class="nav-heading ">
+              <span>欢迎登陆后台管理系统</span>
+            </li>
             <li class=" ">
-              <a href="../general/prizeList.html" title="奖品列表">
-                <span>奖品列表</span>
+              <a href="#prize" title="奖品管理" data-toggle="collapse">
+                <em class="fa fa-gift"></em>
+                <span>奖品管理</span>
+              </a>
+              <ul id="prize" class="nav sidebar-subnav collapse">
+                <li class="sidebar-subnav-header">奖品管理</li>
+                <li class=" ">
+                  <a href="../general/prizeList.html" title="奖品列表">
+                    <span>奖品列表</span>
+                  </a>
+                </li>
+                <li class=" ">
+                  <a href="../general/prizeEdit.html" title="奖品录入">
+                    <span>奖品录入</span>
+                  </a>
+                </li>
+              </ul>
+            </li>
+            <li class=" ">
+              <a href="../general/activity.html" title="抽奖配置">
+                <em class="fa fa-cog"></em>
+                <span>抽奖配置</span>
               </a>
             </li>
             <li class=" ">
-              <a href="../general/prizeEdit.html" title="奖品录入">
-                <span>奖品录入</span>
-              </a>
-            </li>
-          </ul>
-        </li>
-        <li class=" ">
-          <a href="../general/activity.html" title="抽奖配置">
-            <em class="fa fa-cog"></em>
-            <span>抽奖配置</span>
-          </a>
-        </li>
-        <li class=" ">
-          <a href="../general/lotteryBillList.html" title="抽奖订单">
-            <em class="fa fa-th-list"></em>
-            <span>抽奖订单</span>
-          </a>
-        </li>
-        <li class=" ">
-          <a href="../general/changePassword.html" title="密码修改">
-            <em class="fa fa-lock"></em>
-            <span>密码修改</span>
-          </a>
-        </li>
-        <li class="nav-heading ">
-          <span>超管</span>
-        </li>
-        <li class=" ">
-          <a href="#lotteryClearBillList" title="指定中奖" data-toggle="collapse">
-            <em class="fa fa-trophy"></em>
-            <span>指定中奖</span>
-          </a>
-          <ul id="lotteryClearBillList" class="nav sidebar-subnav collapse">
-            <li class=" ">
-              <a href="../admin/lotteryClearBillList.html" title="指定中奖列表">
-                <span>指定中奖列表</span>
+              <a href="../general/lotteryBillList.html" title="抽奖订单">
+                <em class="fa fa-th-list"></em>
+                <span>抽奖订单</span>
               </a>
             </li>
             <li class=" ">
-              <a href="../admin/lotteryClearBillEdit.html" title="指定中奖录入">
-                <span>指定中奖录入</span>
+              <a href="../general/changePassword.html" title="密码修改">
+                <em class="fa fa-lock"></em>
+                <span>密码修改</span>
               </a>
             </li>
           </ul>
-        </li>
-        <li class=" ">
-          <a href="../admin/changePassword.html" title="密码修改">
-            <em class="fa fa-lock"></em>
-            <span>密码修改</span>
-          </a>
-        </li>
-      </ul>
-    </nav>
-  </div>
-</aside>
+        </nav>
+      </div>
+    </aside>
