--- a/src/html/admin/lotteryClearBillList.html
+++ b/src/html/admin/lotteryClearBillList.html
@@ -5,14 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="description" content="">
   <meta name="keywords" content="">
-  <title>奖品管理-奖品列表</title>
+  <title>指定中奖-指定中奖列表</title>
   <!-- build:css -->
   <link rel="stylesheet" href="../../js/vendor/fontawesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="../../js/vendor/animate.css/animate.min.css">
-  <link rel="stylesheet" href="../../css/bootstrap.css" id="bscss">
+  <link rel="stylesheet" href="../../css/bootstrap.css">
   <link rel="stylesheet" href="../../js/vendor/datatable-bootstrap/css/dataTables.bootstrap.css">
   <link rel="stylesheet" href="../../js/vendor/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css">
-  <link rel="stylesheet" href="../../css/app.css" id="maincss">
+  <link rel="stylesheet" href="../../css/app.css">
   <link rel="stylesheet" href="../../css/theme-e.css">
   <!-- endbuild -->
 </head>
@@ -56,169 +56,160 @@
       </nav>
     </header>
     <!-- endbuild -->
-    <!-- build:sidebar -->
+    <!-- build:sidebar2 -->
     <!-- 左侧菜单 -->
-<aside class="aside">
-  <div class="aside-inner">
-    <nav data-sidebar-anyclick-close="" class="sidebar">
-      <ul class="nav">
-        <li class="nav-heading ">
-          <span>一般业务员</span>
-        </li>
-        <li class=" ">
-          <a href="#prize" title="奖品管理" data-toggle="collapse">
-            <em class="fa fa-gift"></em>
-            <span>奖品管理</span>
-          </a>
-          <ul id="prize" class="nav sidebar-subnav collapse">
-            <li class="sidebar-subnav-header">奖品管理</li>
-            <li class=" ">
-              <a href="../general/prizeList.html" title="奖品列表">
-                <span>奖品列表</span>
-              </a>
+    <aside class="aside">
+      <div class="aside-inner">
+        <nav data-sidebar-anyclick-close="" class="sidebar">
+          <ul class="nav">
+            <li class="nav-heading ">
+              <span>欢迎登陆后台管理系统</span>
             </li>
             <li class=" ">
-              <a href="../general/prizeEdit.html" title="奖品录入">
-                <span>奖品录入</span>
+              <a href="#lotteryClearBillList" title="指定中奖" data-toggle="collapse">
+                <em class="fa fa-trophy"></em>
+                <span>指定中奖</span>
               </a>
-            </li>
-          </ul>
-        </li>
-        <li class=" ">
-          <a href="../general/activity.html" title="抽奖配置">
-            <em class="fa fa-cog"></em>
-            <span>抽奖配置</span>
-          </a>
-        </li>
-        <li class=" ">
-          <a href="../general/lotteryBillList.html" title="抽奖订单">
-            <em class="fa fa-th-list"></em>
-            <span>抽奖订单</span>
-          </a>
-        </li>
-        <li class=" ">
-          <a href="../general/changePassword.html" title="密码修改">
-            <em class="fa fa-lock"></em>
-            <span>密码修改</span>
-          </a>
-        </li>
-        <li class="nav-heading ">
-          <span>超管</span>
-        </li>
-        <li class=" ">
-          <a href="#lotteryClearBillList" title="指定中奖" data-toggle="collapse">
-            <em class="fa fa-trophy"></em>
-            <span>指定中奖</span>
-          </a>
-          <ul id="lotteryClearBillList" class="nav sidebar-subnav collapse">
-            <li class=" ">
-              <a href="../admin/lotteryClearBillList.html" title="指定中奖列表">
-                <span>指定中奖列表</span>
-              </a>
+              <ul id="lotteryClearBillList" class="nav sidebar-subnav collapse">
+                <li class=" ">
+                  <a href="../admin/lotteryClearBillList.html" title="指定中奖列表">
+                    <span>指定中奖列表</span>
+                  </a>
+                </li>
+                <li class=" ">
+                  <a href="../admin/lotteryClearBillEdit.html" title="指定中奖录入">
+                    <span>指定中奖录入</span>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class=" ">
-              <a href="../admin/lotteryClearBillEdit.html" title="指定中奖录入">
-                <span>指定中奖录入</span>
+              <a href="../admin/changePassword.html" title="密码修改">
+                <em class="fa fa-lock"></em>
+                <span>密码修改</span>
               </a>
             </li>
           </ul>
-        </li>
-        <li class=" ">
-          <a href="../admin/changePassword.html" title="密码修改">
-            <em class="fa fa-lock"></em>
-            <span>密码修改</span>
-          </a>
-        </li>
-      </ul>
-    </nav>
-  </div>
-</aside>
+        </nav>
+      </div>
+    </aside>
     <!-- endbuild -->
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
         <div class="content-heading">
-          奖品列表
+          指定中奖列表
         </div>
         <div class="row">
           <div class="col-xs-12">
             <!-- START panel-->
             <div class="panel-default">
               <div class="panel-heading">
-                <form class="text-right pt-15">
-                  <div class="row">
-                    <!-- <div class="form-group col-sm-3">
-                      <label class="col-sm-4">选择班级：</label>
-                      <div class="col-sm-8">
-                        <select name="" id="" class="form-control">
-                          <option value="">全部</option>
-                          <option value="1">班级1</option>
-                          <option value="2">班级2</option>
-                        </select>
+                  <form class="form-horizontal pt-15">
+                    <div class="row">
+                      <div class="form-group col-sm-3">
+                        <label class="col-sm-4 control-label">小票码：</label>
+                        <div class="col-sm-8">
+                          <input type="tel" name="" class="form-control">
+                        </div>
                       </div>
-                    </div> -->
-                    <div class="form-group col-sm-3">
-                      <label class="col-sm-4">奖品名称：</label>
-                      <div class="col-sm-8">
-                        <input type="tel" name="" class="form-control">
+                      <div class="form-group col-sm-3">
+                        <label class="col-sm-4 control-label">手机号：</label>
+                        <div class="col-sm-8">
+                          <input type="tel" name="" class="form-control">
+                        </div>
+                      </div>
+                      <div class="form-group col-sm-3">
+                        <label class="col-sm-4 control-label">姓名：</label>
+                        <div class="col-sm-8">
+                          <input type="tel" name="" class="form-control">
+                        </div>
+                      </div>
+                      <div class="form-group col-sm-3">
+                        <label class="col-sm-4 control-label">已使用：</label>
+                        <div class="col-sm-8">
+                          <select name="" id="" class="form-control">
+                            <option value="">全部</option>
+                            <option value="1">是</option>
+                            <option value="2">否</option>
+                          </select>
+                        </div>
+                      </div>
+                      <div class="form-group col-sm-3">
+                        <label class="col-sm-4 control-label">奖品：</label>
+                        <div class="col-sm-8">
+                          <select name="" id="" class="form-control">
+                            <option value="">全部</option>
+                            <option value="1">奖品1</option>
+                            <option value="2">奖品2</option>
+                          </select>
+                        </div>
+                      </div>
+                      <div class="form-group col-sm-3">
+                        <label class="col-sm-4 control-label">来源：</label>
+                        <div class="col-sm-8">
+                          <input type="tel" name="" class="form-control">
+                        </div>
+                      </div>
+                      <div class="form-group col-sm-3">
+                        <label class="col-sm-4 control-label">创建日期：</label>
+                        <div class="col-sm-8">
+                            <div id="createtDate" class="input-group date">
+                              <input type="text" class="form-control">
+                              <span class="input-group-addon">
+                                  <span class="fa fa-calendar"></span>
+                              </span>
+                            </div>
+                          </div>
+                      </div>
+                      <div class="col-sm-1">
+                        <button type="submit" class="btn btn-primary">搜索</button>
                       </div>
                     </div>
-                    <div class="col-sm-1">
-                      <button type="submit" class="btn btn-primary">搜索</button>
-                    </div>
-                  </div>
-                </form>
+                  </form>
               </div>
               <!-- START table-responsive-->
               <div class="panel-heading">
                 <div class="row mb-10">
                   <div class="col-sm-1">
-                    <a class="btn btn-primary" href="../general/prizeEdit.html">+新建商品</a>
+                    <a class="btn btn-primary" href="../admin/lotteryClearBillEdit.html">+添加指定中奖</a>
                   </div>
                 </div>
                 <div class="table-responsive">
                   <table id="" class="table table-bordered table-hover">
                     <thead>
                       <tr>
-                        <th>编号</th>
-                        <th>名称</th>
-                        <th>数量</th>
-                        <th>中奖率</th>
-                        <th>图片</th>
+                        <th>小票码</th>
+                        <th>手机号</th>
+                        <th>姓名</th>
+                        <th>已使用</th>
+                        <th>奖品</th>
+                        <th>创建日期</th>
                         <th>操作</th>
                       </tr>
                     </thead>
                     <tbody>
                       <tr>
-                        <td>1</td>
-                        <td>奖品1</td>
-                        <td>15</td>
-                        <td>52%</td>
-                        <td><img src="../../img/dummy.png"></td>
+                        <td>1123122131</td>
+                        <td>15000000000</td>
+                        <td>洪老师</td>
+                        <td>是</td>
+                        <td>奖品2</td>
+                        <td>2017-02-15</td>
                         <td>
-                          <a class="btn btn-primary" href="studyreport_all_info.html">编辑</a>
+                          <a class="btn btn-primary" href="../admin/lotteryClearBillEdit.html">编辑</a>
                           <a class="btn btn-danger" href="javascript:;">删除</a>
                         </td>
                       </tr>
                       <tr>
-                        <td>1</td>
-                        <td>奖品1</td>
-                        <td>15</td>
-                        <td>52%</td>
-                        <td><img src="../../img/dummy.png"></td>
+                        <td>1123122131</td>
+                        <td>15000000000</td>
+                        <td>洪老师</td>
+                        <td>是</td>
+                        <td>奖品2</td>
+                        <td>2017-02-15</td>
                         <td>
-                          <a class="btn btn-primary" href="studyreport_all_info.html">编辑</a>
-                          <a class="btn btn-danger" href="javascript:;">删除</a>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>1</td>
-                        <td>奖品1</td>
-                        <td>15</td>
-                        <td>52%</td>
-                        <td><img src="../../img/dummy.png"></td>
-                        <td>
-                          <a class="btn btn-primary" href="studyreport_all_info.html">编辑</a>
+                          <a class="btn btn-primary" href="../admin/lotteryClearBillEdit.html">编辑</a>
                           <a class="btn btn-danger" href="javascript:;">删除</a>
                         </td>
                       </tr>
@@ -262,7 +253,8 @@
     <!-- 主要内容END -->
     <!-- build:foot -->
     <footer>
-      <span>&copy; 2019 - 滨清科技 www.bingblue.com</span>
+      <span>&copy; 2019 - 哥老官</span>
+      <a class="support" href="https://www.bingblue.com">技术支持：<img src="../../img/logo-single.png">滨清科技</a>
     </footer>
     <!-- endbuild -->
   </div>
@@ -276,5 +268,17 @@
   <script src="../../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/locales/bootstrap-datetimepicker.zh-CN.js"></script>
   <script src="../../js/app.js"></script>
   <!-- endbuild -->
+  <script>
+    $(function(){
+      $('#createtDate').datetimepicker({
+        language: 'zh-CN',
+        autoclose: true,
+        minView: '2',
+        startDate: '',
+        endDate: '',
+        format: 'yyyy-mm-dd'
+      })
+    })
+  </script>
 </body>
 </html>
