--- a/src/html/general/prizeList.html
+++ b/src/html/general/prizeList.html
@@ -9,10 +9,10 @@
   <!-- build:css -->
   <link rel="stylesheet" href="../../js/vendor/fontawesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="../../js/vendor/animate.css/animate.min.css">
-  <link rel="stylesheet" href="../../css/bootstrap.css" id="bscss">
+  <link rel="stylesheet" href="../../css/bootstrap.css">
   <link rel="stylesheet" href="../../js/vendor/datatable-bootstrap/css/dataTables.bootstrap.css">
   <link rel="stylesheet" href="../../js/vendor/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css">
-  <link rel="stylesheet" href="../../css/app.css" id="maincss">
+  <link rel="stylesheet" href="../../css/app.css">
   <link rel="stylesheet" href="../../css/theme-e.css">
   <!-- endbuild -->
 </head>
@@ -58,81 +58,54 @@
     <!-- endbuild -->
     <!-- build:sidebar -->
     <!-- 左侧菜单 -->
-<aside class="aside">
-  <div class="aside-inner">
-    <nav data-sidebar-anyclick-close="" class="sidebar">
-      <ul class="nav">
-        <li class="nav-heading ">
-          <span>一般业务员</span>
-        </li>
-        <li class=" ">
-          <a href="#prize" title="奖品管理" data-toggle="collapse">
-            <em class="fa fa-gift"></em>
-            <span>奖品管理</span>
-          </a>
-          <ul id="prize" class="nav sidebar-subnav collapse">
-            <li class="sidebar-subnav-header">奖品管理</li>
+    <aside class="aside">
+      <div class="aside-inner">
+        <nav data-sidebar-anyclick-close="" class="sidebar">
+          <ul class="nav">
+            <li class="nav-heading ">
+              <span>欢迎登陆后台管理系统</span>
+            </li>
             <li class=" ">
-              <a href="../general/prizeList.html" title="奖品列表">
-                <span>奖品列表</span>
+              <a href="#prize" title="奖品管理" data-toggle="collapse">
+                <em class="fa fa-gift"></em>
+                <span>奖品管理</span>
+              </a>
+              <ul id="prize" class="nav sidebar-subnav collapse">
+                <li class="sidebar-subnav-header">奖品管理</li>
+                <li class=" ">
+                  <a href="../general/prizeList.html" title="奖品列表">
+                    <span>奖品列表</span>
+                  </a>
+                </li>
+                <li class=" ">
+                  <a href="../general/prizeEdit.html" title="奖品录入">
+                    <span>奖品录入</span>
+                  </a>
+                </li>
+              </ul>
+            </li>
+            <li class=" ">
+              <a href="../general/activity.html" title="抽奖配置">
+                <em class="fa fa-cog"></em>
+                <span>抽奖配置</span>
               </a>
             </li>
             <li class=" ">
-              <a href="../general/prizeEdit.html" title="奖品录入">
-                <span>奖品录入</span>
-              </a>
-            </li>
-          </ul>
-        </li>
-        <li class=" ">
-          <a href="../general/activity.html" title="抽奖配置">
-            <em class="fa fa-cog"></em>
-            <span>抽奖配置</span>
-          </a>
-        </li>
-        <li class=" ">
-          <a href="../general/lotteryBillList.html" title="抽奖订单">
-            <em class="fa fa-th-list"></em>
-            <span>抽奖订单</span>
-          </a>
-        </li>
-        <li class=" ">
-          <a href="../general/changePassword.html" title="密码修改">
-            <em class="fa fa-lock"></em>
-            <span>密码修改</span>
-          </a>
-        </li>
-        <li class="nav-heading ">
-          <span>超管</span>
-        </li>
-        <li class=" ">
-          <a href="#lotteryClearBillList" title="指定中奖" data-toggle="collapse">
-            <em class="fa fa-trophy"></em>
-            <span>指定中奖</span>
-          </a>
-          <ul id="lotteryClearBillList" class="nav sidebar-subnav collapse">
-            <li class=" ">
-              <a href="../admin/lotteryClearBillList.html" title="指定中奖列表">
-                <span>指定中奖列表</span>
+              <a href="../general/lotteryBillList.html" title="抽奖订单">
+                <em class="fa fa-th-list"></em>
+                <span>抽奖订单</span>
               </a>
             </li>
             <li class=" ">
-              <a href="../admin/lotteryClearBillEdit.html" title="指定中奖录入">
-                <span>指定中奖录入</span>
+              <a href="../general/changePassword.html" title="密码修改">
+                <em class="fa fa-lock"></em>
+                <span>密码修改</span>
               </a>
             </li>
           </ul>
-        </li>
-        <li class=" ">
-          <a href="../admin/changePassword.html" title="密码修改">
-            <em class="fa fa-lock"></em>
-            <span>密码修改</span>
-          </a>
-        </li>
-      </ul>
-    </nav>
-  </div>
-</aside>
+        </nav>
+      </div>
+    </aside>
     <!-- endbuild -->
     <!-- 主要内容 -->
     <section>
@@ -145,10 +118,10 @@
             <!-- START panel-->
             <div class="panel-default">
               <div class="panel-heading">
-                <form class="text-right pt-15">
+                <form class="form-horizontal pt-15">
                   <div class="row">
                     <!-- <div class="form-group col-sm-3">
-                      <label class="col-sm-4">选择班级：</label>
+                      <label class="col-sm-4 control-label">选择班级：</label>
                       <div class="col-sm-8">
                         <select name="" id="" class="form-control">
                           <option value="">全部</option>
@@ -158,7 +131,7 @@
                       </div>
                     </div> -->
                     <div class="form-group col-sm-3">
-                      <label class="col-sm-4">奖品名称：</label>
+                      <label class="col-sm-4 control-label">奖品名称：</label>
                       <div class="col-sm-8">
                         <input type="tel" name="" class="form-control">
                       </div>
@@ -196,7 +169,7 @@
                         <td>52%</td>
                         <td><img src="../../img/dummy.png"></td>
                         <td>
-                          <a class="btn btn-primary" href="studyreport_all_info.html">编辑</a>
+                          <a class="btn btn-primary" href="../general/prizeEdit.html">编辑</a>
                           <a class="btn btn-danger" href="javascript:;">删除</a>
                         </td>
                       </tr>
@@ -207,7 +180,7 @@
                         <td>52%</td>
                         <td><img src="../../img/dummy.png"></td>
                         <td>
-                          <a class="btn btn-primary" href="studyreport_all_info.html">编辑</a>
+                          <a class="btn btn-primary" href="../general/prizeEdit.html">编辑</a>
                           <a class="btn btn-danger" href="javascript:;">删除</a>
                         </td>
                       </tr>
@@ -218,7 +191,7 @@
                         <td>52%</td>
                         <td><img src="../../img/dummy.png"></td>
                         <td>
-                          <a class="btn btn-primary" href="studyreport_all_info.html">编辑</a>
+                          <a class="btn btn-primary" href="../general/prizeEdit.html">编辑</a>
                           <a class="btn btn-danger" href="javascript:;">删除</a>
                         </td>
                       </tr>
@@ -262,7 +235,8 @@
     <!-- 主要内容END -->
     <!-- build:foot -->
     <footer>
-      <span>&copy; 2019 - 滨清科技 www.bingblue.com</span>
+      <span>&copy; 2019 - 哥老官</span>
+      <a class="support" href="https://www.bingblue.com">技术支持：<img src="../../img/logo-single.png">滨清科技</a>
     </footer>
     <!-- endbuild -->
   </div>
