--- a/src/html/03_index.html
+++ b/src/html/03_index.html
@@ -82,7 +82,7 @@
 
     <div class="body">
       <div class="user_info">
-        <ul>
+        <!-- <ul>
           <li>
             <div class="user_info_title">
               <span class="user_info_title_pic"></span>
@@ -168,6 +168,41 @@
                   <span class="user_info_details_num">三等兵</span>
                 </p>
               </div>
+            </div>
+          </li>
+        </ul> -->
+        <ul>
+          <li>
+            <div class="user_info_title">
+              <span class="user_info_title_pic"></span>
+              <span class="user_info_title_name">杨荣臻</span>
+            </div>
+            <div class="user_info_details">
+              <div class="welcome">
+                  <img src="../img/welcome.png" alt="">
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="user_info_title">
+              <span class="user_info_title_icon"></span>
+              <span class="user_info_title_heading">今日学习报告</span>
+            </div>
+            <div class="user_info_details clearfix">
+              <div class="expect">
+                  <img src="../img/expect.png" alt="">即将开放
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="user_info_title clearfix">
+              <span class="user_info_title_icon"></span>
+              <span class="user_info_title_heading">我的军衔</span>
+            </div>
+            <div class="user_info_details clearfix">
+                <div class="expect">
+                    <img src="../img/expect.png" alt="">即将开放
+                </div>
             </div>
           </li>
         </ul>
