--- a/src/html/35_realText.html
+++ b/src/html/35_realText.html
@@ -26,46 +26,46 @@
   <![endif]-->
   <!-- build:head -->
   <header class="comm-header">
-  <div class="midd_header clearfix">
-    <div class="index_icon">
-      <a href="index.html"></a>
-    </div>
-    <ul class="nav clearfix">
-      <li class="active">
-        <a href="#">课程中心</a>
-      </li>
-      <li>
-        <a href="#">我的班级</a>
-      </li>
-      <li>
-        <a href="#">排行榜</a>
-      </li>
-      <li>
-        <a href="#">学币商城</a>
-      </li>
-    </ul>
-    <div class="login">
-      <a href="#">个人中心</a>
-      <ul class="head-list">
-        <li>
-          <a class="info" href='javascript:;'>个人资料</a>
+    <div class="midd_header clearfix">
+      <div class="index_icon">
+        <a href="index.html"></a>
+      </div>
+      <ul class="nav clearfix">
+        <li class="active">
+          <a href="#">课程中心</a>
         </li>
         <li>
-          <a class="honor" href='javascript:;'>荣誉中心</a>
+          <a href="#">我的班级</a>
         </li>
         <li>
-          <a class='test'href='javascript:;'>测试记录</a>
+          <a href="#">排行榜</a>
         </li>
         <li>
-          <a class="task" href='javascript:;'>我的任务</a>
-        </li>
-        <li>
-          <a class="logout" href='javascript:;'>退出登录</a>
+          <a href="#">学币商城</a>
         </li>
       </ul>
+      <div class="login">
+        <a href="#">个人中心</a>
+        <ul class="head-list">
+          <li>
+            <a class="info" href='javascript:;'>个人资料</a>
+          </li>
+          <li>
+            <a class="honor" href='javascript:;'>荣誉中心</a>
+          </li>
+          <li>
+            <a class='test' href='javascript:;'>测试记录</a>
+          </li>
+          <li>
+            <a class="task" href='javascript:;'>我的任务</a>
+          </li>
+          <li>
+            <a class="logout" href='javascript:;'>退出登录</a>
+          </li>
+        </ul>
+      </div>
     </div>
-  </div>
-</header>
+  </header>
   <!-- endbuild -->
 
 
@@ -108,7 +108,8 @@
             </div>
           </div>
           <div class="xc-proplay">
-            <audio class="audioMp3"><source src="../music/3.mp3" type="audio/mp3"></audio>
+            <audio class="audioMp3">
+              <source src="../music/3.mp3" type="audio/mp3"></audio>
             <div class="xc-proplay-btns">
               <!-- <img class="xc-proplay-img" src="../img/readText-play-active.png" alt="播放"> -->
               <img class="xc-proplay-img tooglePlay play" src="../img/readText-play.png" alt="播放">
@@ -129,6 +130,8 @@
             <p class="coustom-item">读单词，选出划线部分发音不同的单词，用A, B, C或D表示</p>
           </div>
           <div class="pent-body">
+            <h2 class="xc-coustom-title">第一节 (共5小题；每小题1.5分,满分7.5分)</h2>
+            <p class="xc-coustom-tip">听下面5段对话。每段对话后有一个小题，从题中所给的A、B、C三个选项中选出最佳选项，并标在试卷的相应位置。听完每段对话后，你都有10秒钟的时间来回答有关小题和阅读下一小题。每段对话仅读一遍。</p>
             <div class="xc-coustom-pent">
               <div class="coustom-pent-head">
                 <span class="num">1.</span>题干题干题干题干题干题干
@@ -137,7 +140,7 @@
                 <div class="coustom-label can radio">
                   <div>
                     <label class="label active">
-                      <input class="radio-input" type="radio" value="1" name="coustom1" checked/>A选项</label>
+                      <input class="radio-input" type="radio" value="1" name="coustom1" checked />A选项</label>
                   </div>
                   <div>
                     <label class="label">
@@ -158,7 +161,7 @@
                 <div class="coustom-label can radio">
                   <div>
                     <label class="label active">
-                      <input class="radio-input" type="radio" value="1" name="coustom2" checked/>A选项</label>
+                      <input class="radio-input" type="radio" value="1" name="coustom2" checked />A选项</label>
                   </div>
                   <div>
                     <label class="label">
@@ -171,6 +174,179 @@
                 </div>
               </div>
             </div>
+            <div class="xc-coustom-pent">
+              <div class="coustom-pent-head">
+                <span class="num">3.</span>题干题干题干题干题干题干
+              </div>
+              <div class="coustom-pent-body">
+                <div class="coustom-label can radio">
+                  <div>
+                    <label class="label active">
+                      <input class="radio-input" type="radio" value="1" name="coustom1" checked />A选项</label>
+                  </div>
+                  <div>
+                    <label class="label">
+                      <input class="radio-input" type="radio" value="2" name="coustom1" />B选项</label>
+                  </div>
+                  <div>
+                    <label class="label">
+                      <input class="radio-input" type="radio" value="3" name="coustom1" />C选项</label>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="xc-coustom-pent">
+              <div class="coustom-pent-head">
+                <span class="num">4.</span>题干题干题干题干题干题干
+              </div>
+              <div class="coustom-pent-body">
+                <div class="coustom-label can radio">
+                  <div>
+                    <label class="label active">
+                      <input class="radio-input" type="radio" value="1" name="coustom2" checked />A选项</label>
+                  </div>
+                  <div>
+                    <label class="label">
+                      <input class="radio-input" type="radio" value="2" name="coustom2" />B选项</label>
+                  </div>
+                  <div>
+                    <label class="label">
+                      <input class="radio-input" type="radio" value="3" name="coustom2" />C选项</label>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="xc-coustom-pent">
+              <div class="coustom-pent-head">
+                <span class="num">5.</span>题干题干题干题干题干题干
+              </div>
+              <div class="coustom-pent-body">
+                <div class="coustom-label can radio">
+                  <div>
+                    <label class="label active">
+                      <input class="radio-input" type="radio" value="1" name="coustom2" checked />A选项</label>
+                  </div>
+                  <div>
+                    <label class="label">
+                      <input class="radio-input" type="radio" value="2" name="coustom2" />B选项</label>
+                  </div>
+                  <div>
+                    <label class="label">
+                      <input class="radio-input" type="radio" value="3" name="coustom2" />C选项</label>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <h2 class="xc-coustom-title">第二节（共15小题，每小题1.5分, 满分22.5分）</h2>
+            <p class="xc-coustom-tip">听下面5段对话或独白。每段对话或独白后 几个小题，从题中所给的A、B、C三个选项中选出虽佳选项，并标在试卷的相应位置。听每段对话或独白前，你将有时间阅读各个小题，每小题5秒钟; 听完后，各小题将给出5秒钟的作答时间。每段对话或独白读两遍。</p>
+            <p class="xc-coustom-tip-small">听第6段材料，回答第6、7题。</p>
+            <div class="xc-coustom-pent">
+                <div class="coustom-pent-head">
+                  <span class="num">6.</span>题干题干题干题干题干题干
+                </div>
+                <div class="coustom-pent-body">
+                  <div class="coustom-label can radio">
+                    <div>
+                      <label class="label active">
+                        <input class="radio-input" type="radio" value="1" name="coustom2" checked />A选项</label>
+                    </div>
+                    <div>
+                      <label class="label">
+                        <input class="radio-input" type="radio" value="2" name="coustom2" />B选项</label>
+                    </div>
+                    <div>
+                      <label class="label">
+                        <input class="radio-input" type="radio" value="3" name="coustom2" />C选项</label>
+                    </div>
+                  </div>
+                </div>
+            </div>
+            <div class="xc-coustom-pent">
+              <div class="coustom-pent-head">
+                <span class="num">7.</span>题干题干题干题干题干题干
+              </div>
+              <div class="coustom-pent-body">
+                <div class="coustom-label can radio">
+                  <div>
+                    <label class="label active">
+                      <input class="radio-input" type="radio" value="1" name="coustom2" checked />A选项</label>
+                  </div>
+                  <div>
+                    <label class="label">
+                      <input class="radio-input" type="radio" value="2" name="coustom2" />B选项</label>
+                  </div>
+                  <div>
+                    <label class="label">
+                      <input class="radio-input" type="radio" value="3" name="coustom2" />C选项</label>
+                  </div>
+                </div>
+              </div>
+            </div>
+            
+            <p class="xc-coustom-tip-small">听第8段材料，回答第10~12题。</p>
+            <div class="xc-coustom-pent">
+                <div class="coustom-pent-head">
+                  <span class="num">10.</span>题干题干题干题干题干题干
+                </div>
+                <div class="coustom-pent-body">
+                  <div class="coustom-label can radio">
+                    <div>
+                      <label class="label active">
+                        <input class="radio-input" type="radio" value="1" name="coustom2" checked />A选项</label>
+                    </div>
+                    <div>
+                      <label class="label">
+                        <input class="radio-input" type="radio" value="2" name="coustom2" />B选项</label>
+                    </div>
+                    <div>
+                      <label class="label">
+                        <input class="radio-input" type="radio" value="3" name="coustom2" />C选项</label>
+                    </div>
+                  </div>
+                </div>
+            </div>
+            <div class="xc-coustom-pent">
+              <div class="coustom-pent-head">
+                <span class="num">11.</span>题干题干题干题干题干题干
+              </div>
+              <div class="coustom-pent-body">
+                <div class="coustom-label can radio">
+                  <div>
+                    <label class="label active">
+                      <input class="radio-input" type="radio" value="1" name="coustom2" checked />A选项</label>
+                  </div>
+                  <div>
+                    <label class="label">
+                      <input class="radio-input" type="radio" value="2" name="coustom2" />B选项</label>
+                  </div>
+                  <div>
+                    <label class="label">
+                      <input class="radio-input" type="radio" value="3" name="coustom2" />C选项</label>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="xc-coustom-pent">
+                <div class="coustom-pent-head">
+                  <span class="num">12.</span>题干题干题干题干题干题干
+                </div>
+                <div class="coustom-pent-body">
+                  <div class="coustom-label can radio">
+                    <div>
+                      <label class="label active">
+                        <input class="radio-input" type="radio" value="1" name="coustom2" checked />A选项</label>
+                    </div>
+                    <div>
+                      <label class="label">
+                        <input class="radio-input" type="radio" value="2" name="coustom2" />B选项</label>
+                    </div>
+                    <div>
+                      <label class="label">
+                        <input class="radio-input" type="radio" value="3" name="coustom2" />C选项</label>
+                    </div>
+                  </div>
+                </div>
+              </div>
           </div>
         </div>
       </div>
@@ -198,8 +374,8 @@
   <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
   <script src="../js/main_xc.js"></script>
   <script>
-    $(function() {
-      comment.endTime($('.xc-time'), 88, function() {
+    $(function () {
+      comment.endTime($('.xc-time'), 88, function () {
         console.log('倒计时结束')
       })
     })
