--- a/src/html/part/sidebar.html
+++ b/src/html/part/sidebar.html
@@ -26,6 +26,25 @@
               </ul>
             </li>
             <li class=" ">
+              <a href="#award" title="奖项管理" data-toggle="collapse">
+                <em class="fa fa-gift"></em>
+                <span>奖项管理</span>
+              </a>
+              <ul id="award" class="nav sidebar-subnav collapse">
+                <li class="sidebar-subnav-header">奖项管理</li>
+                <li class=" ">
+                  <a href="../general/awardList.html" title="奖项列表">
+                    <span>奖项列表</span>
+                  </a>
+                </li>
+                <li class=" ">
+                  <a href="../general/awardEdit.html" title="奖项录入">
+                    <span>奖项录入</span>
+                  </a>
+                </li>
+              </ul>
+            </li>
+            <li class=" ">
               <a href="../general/activity.html" title="抽奖配置">
                 <em class="fa fa-cog"></em>
                 <span>抽奖配置</span>
