--- a/src/html/general/prizeList.html
+++ b/src/html/general/prizeList.html
@@ -168,7 +168,7 @@
               <div class="panel-heading">
                 <div class="row mb-10">
                   <div class="col-sm-1">
-                    <a class="btn btn-primary" href="../general/prizeEdit.html">+新建商品</a>
+                    <a class="btn btn-primary" href="../general/prizeEdit.html">+新建奖品</a>
                   </div>
                 </div>
                 <div class="table-responsive">
