--- a/src/html/35_realText.html
+++ b/src/html/35_realText.html
@@ -113,7 +113,9 @@
             <p class="coustom-item">读单词，选出划线部分发音不同的单词，用A, B, C或D表示</p>
           </div>
           <div class="pent-body">
-            <div class="xc-proplay">
+            <h2 class="xc-coustom-title">第一节 (共5小题；每小题1.5分,满分7.5分)</h2>
+            <p class="xc-coustom-tip">听下面5段对话。每段对话后有一个小题，从题中所给的A、B、C三个选项中选出最佳选项，并标在试卷的相应位置。听完每段对话后，你都有10秒钟的时间来回答有关小题和阅读下一小题。每段对话仅读一遍。</p>
+            <div class="xc-proplay small">
               <audio class="audioMp3">
                 <source src="../music/3.mp3" type="audio/mp3"></audio>
               <div class="xc-proplay-btns">
@@ -130,8 +132,6 @@
                 <span class="xc-proplay-time duration">00:00</span>
               </div>
             </div>
-            <h2 class="xc-coustom-title">第一节 (共5小题；每小题1.5分,满分7.5分)</h2>
-            <p class="xc-coustom-tip">听下面5段对话。每段对话后有一个小题，从题中所给的A、B、C三个选项中选出最佳选项，并标在试卷的相应位置。听完每段对话后，你都有10秒钟的时间来回答有关小题和阅读下一小题。每段对话仅读一遍。</p>
             <div class="xc-coustom-pent">
               <div class="coustom-pent-head">
                 <span class="num">1.</span>题干题干题干题干题干题干
@@ -237,7 +237,11 @@
                 </div>
               </div>
             </div>
-            <div class="xc-proplay" style='margin-top: 10px'>
+            <h2 class="xc-coustom-title">第二节（共15小题，每小题1.5分, 满分22.5分）</h2>
+            <p class="xc-coustom-tip">听下面5段对话或独白。每段对话或独白后
+              几个小题，从题中所给的A、B、C三个选项中选出虽佳选项，并标在试卷的相应位置。听每段对话或独白前，你将有时间阅读各个小题，每小题5秒钟; 听完后，各小题将给出5秒钟的作答时间。每段对话或独白读两遍。</p>
+            <p class="xc-coustom-tip-small">听第6段材料，回答第6、7题。</p>
+            <div class="xc-proplay small" style='margin-top: 10px'>
               <audio class="audioMp3">
                 <source src="../music/3.mp3" type="audio/mp3"></audio>
               <div class="xc-proplay-btns">
@@ -254,10 +258,6 @@
                 <span class="xc-proplay-time duration">00:00</span>
               </div>
             </div>
-            <h2 class="xc-coustom-title">第二节（共15小题，每小题1.5分, 满分22.5分）</h2>
-            <p class="xc-coustom-tip">听下面5段对话或独白。每段对话或独白后
-              几个小题，从题中所给的A、B、C三个选项中选出虽佳选项，并标在试卷的相应位置。听每段对话或独白前，你将有时间阅读各个小题，每小题5秒钟; 听完后，各小题将给出5秒钟的作答时间。每段对话或独白读两遍。</p>
-            <p class="xc-coustom-tip-small">听第6段材料，回答第6、7题。</p>
             <div class="xc-coustom-pent">
               <div class="coustom-pent-head">
                 <span class="num">6.</span>题干题干题干题干题干题干
@@ -300,7 +300,8 @@
                 </div>
               </div>
             </div>
-            <div class="xc-proplay" style='margin-top: 10px'>
+            <p class="xc-coustom-tip-small">听第8段材料，回答第10~12题。</p>
+            <div class="xc-proplay small" style='margin-top: 10px'>
               <audio class="audioMp3">
                 <source src="../music/3.mp3" type="audio/mp3"></audio>
               <div class="xc-proplay-btns">
@@ -317,7 +318,6 @@
                 <span class="xc-proplay-time duration">00:00</span>
               </div>
             </div>
-            <p class="xc-coustom-tip-small">听第8段材料，回答第10~12题。</p>
             <div class="xc-coustom-pent">
               <div class="coustom-pent-head">
                 <span class="num">10.</span>题干题干题干题干题干题干
