--- a/src/html/intelligent_real_hearing.html
+++ b/src/html/intelligent_real_hearing.html
@@ -648,18 +648,18 @@
                     </ul>
                     <h3>第二节 <a class="btn btn-danger">清空</a></h3>
                     <div class="form-group">
-                        <label class="col-lg-1 control-label">录音</label>
-                        <div class="col-lg-11">
-                          <div class="fileinput-box">
-                            <span class="btn btn-default fileinput-button">
-                              <i class="fa fa-fw fa-upload"></i>
-                              <span>上传文件</span>
-                              <input type="file" class="file-ipt" name="files[]">
-                            </span>
-                            <p class="audio-type">支持扩展名：mp3</p>
-                          </div>
+                      <label class="col-lg-1 control-label">录音</label>
+                      <div class="col-lg-11">
+                        <div class="fileinput-box">
+                          <span class="btn btn-default fileinput-button">
+                            <i class="fa fa-fw fa-upload"></i>
+                            <span>上传文件</span>
+                            <input type="file" class="file-ipt" name="files[]">
+                          </span>
+                          <p class="audio-type">支持扩展名：mp3</p>
                         </div>
                       </div>
+                    </div>
                     <ul>
                       <div class="form-group">
                         <label class="col-lg-1 control-label xc-nowrap">题目文本：</label>
@@ -740,6 +740,29 @@
                           </div>
                         </div>
                       </li>
+                    </ul>
+                    <h3>第三节 <a class="btn btn-danger">清空</a></h3>
+                    <div class="form-group">
+                      <label class="col-lg-1 control-label">录音</label>
+                      <div class="col-lg-11">
+                        <div class="fileinput-box">
+                          <span class="btn btn-default fileinput-button">
+                            <i class="fa fa-fw fa-upload"></i>
+                            <span>上传文件</span>
+                            <input type="file" class="file-ipt" name="files[]">
+                          </span>
+                          <p class="audio-type">支持扩展名：mp3</p>
+                        </div>
+                      </div>
+                    </div>
+                    <ul>
+                      <div class="form-group">
+                        <label class="col-lg-1 control-label xc-nowrap">题目文本：</label>
+                        <div class="col-lg-11">
+                          <textarea type="text" placeholder="听下面5段对话。每段对话后有一个小题，从题中所给的A、B、C三个选项中选出最佳选项，并标在试卷的相应位置。听完每段对话后，你都有10秒钟的时间来回答有关小题和阅读下一小题。每段对话仅读一遍。"
+                            class="form-control"></textarea>
+                        </div>
+                      </div>
                       <li>
                         <h4 class="col-lg-1">08</h4>
                         <div class="col-lg-11">
@@ -812,6 +835,29 @@
                           </div>
                         </div>
                       </li>
+                    </ul>
+                    <h3>第四节 <a class="btn btn-danger">清空</a></h3>
+                    <div class="form-group">
+                      <label class="col-lg-1 control-label">录音</label>
+                      <div class="col-lg-11">
+                        <div class="fileinput-box">
+                          <span class="btn btn-default fileinput-button">
+                            <i class="fa fa-fw fa-upload"></i>
+                            <span>上传文件</span>
+                            <input type="file" class="file-ipt" name="files[]">
+                          </span>
+                          <p class="audio-type">支持扩展名：mp3</p>
+                        </div>
+                      </div>
+                    </div>
+                    <ul>
+                      <div class="form-group">
+                        <label class="col-lg-1 control-label xc-nowrap">题目文本：</label>
+                        <div class="col-lg-11">
+                          <textarea type="text" placeholder="听下面5段对话。每段对话后有一个小题，从题中所给的A、B、C三个选项中选出最佳选项，并标在试卷的相应位置。听完每段对话后，你都有10秒钟的时间来回答有关小题和阅读下一小题。每段对话仅读一遍。"
+                            class="form-control"></textarea>
+                        </div>
+                      </div>
                       <li>
                         <h4 class="col-lg-1">10</h4>
                         <div class="col-lg-11">
@@ -920,6 +966,29 @@
                           </div>
                         </div>
                       </li>
+                    </ul>
+                    <h3>第五节 <a class="btn btn-danger">清空</a></h3>
+                    <div class="form-group">
+                      <label class="col-lg-1 control-label">录音</label>
+                      <div class="col-lg-11">
+                        <div class="fileinput-box">
+                          <span class="btn btn-default fileinput-button">
+                            <i class="fa fa-fw fa-upload"></i>
+                            <span>上传文件</span>
+                            <input type="file" class="file-ipt" name="files[]">
+                          </span>
+                          <p class="audio-type">支持扩展名：mp3</p>
+                        </div>
+                      </div>
+                    </div>
+                    <ul>
+                      <div class="form-group">
+                        <label class="col-lg-1 control-label xc-nowrap">题目文本：</label>
+                        <div class="col-lg-11">
+                          <textarea type="text" placeholder="听下面5段对话。每段对话后有一个小题，从题中所给的A、B、C三个选项中选出最佳选项，并标在试卷的相应位置。听完每段对话后，你都有10秒钟的时间来回答有关小题和阅读下一小题。每段对话仅读一遍。"
+                            class="form-control"></textarea>
+                        </div>
+                      </div>
                       <li>
                         <h4 class="col-lg-1">13</h4>
                         <div class="col-lg-11">
@@ -1064,6 +1133,29 @@
                           </div>
                         </div>
                       </li>
+                    </ul>
+                    <h3>第六节 <a class="btn btn-danger">清空</a></h3>
+                    <div class="form-group">
+                      <label class="col-lg-1 control-label">录音</label>
+                      <div class="col-lg-11">
+                        <div class="fileinput-box">
+                          <span class="btn btn-default fileinput-button">
+                            <i class="fa fa-fw fa-upload"></i>
+                            <span>上传文件</span>
+                            <input type="file" class="file-ipt" name="files[]">
+                          </span>
+                          <p class="audio-type">支持扩展名：mp3</p>
+                        </div>
+                      </div>
+                    </div>
+                    <ul>
+                      <div class="form-group">
+                        <label class="col-lg-1 control-label xc-nowrap">题目文本：</label>
+                        <div class="col-lg-11">
+                          <textarea type="text" placeholder="听下面5段对话。每段对话后有一个小题，从题中所给的A、B、C三个选项中选出最佳选项，并标在试卷的相应位置。听完每段对话后，你都有10秒钟的时间来回答有关小题和阅读下一小题。每段对话仅读一遍。"
+                            class="form-control"></textarea>
+                        </div>
+                      </div>
                       <li>
                         <h4 class="col-lg-1">17</h4>
                         <div class="col-lg-11">
